# FastRecall

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  architecture.md  commands.md  data_model.md  developer_journey.md  flowcharts.md
fastrecall/: README.md  __init__.py  cli.py  config.py  main.py  models.py
fastrecall/answer/: README.md  __init__.py  composer.py  prompts.py
fastrecall/cache/: __init__.py  engine.py  eviction.py
fastrecall/code_index/: README.md  graph.py  scanner.py  summaries.py  symbols.py
fastrecall/code_index/languages/: README.md  __init__.py  java_parser.py  perl_parser.py  python_parser.py  robot_parser.py
fastrecall/document_index/: README.md  __init__.py  hierarchy.py  page_index.py  parser.py  summaries.py
fastrecall/embeddings/: README.md  __init__.py  base.py  local.py  openai_embed.py  optional.py  registry.py
fastrecall/indexes/: README.md  graph.py  hierarchy.py  lexical.py  symbol.py  vector.py
fastrecall/ingestion/: README.md  __init__.py  discovery.py  documents.py  registry.py  repositories.py
fastrecall/proxy/: __init__.py  anthropic.py  base.py  openai.py  registry.py
fastrecall/retrieval/: README.md  composer.py  results.py  retrievers.py  router.py
fastrecall/server/: __init__.py  app.py  routes.py
fastrecall/similarity/: __init__.py  cosine.py
fastrecall/storage/: README.md  __init__.py  jsonl_store.py  manifest.py  paths.py  schema.sql  sqlite.py  sqlite_store.py
fastrecall/utils/: README.md  hashing.py  logging.py  text.py
tests/: README.md  test_skeleton.py
