[project]
name = "fastrecall"
version = "0.1.0"
description = "Local-first structured retrieval for documents and code repositories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
fastrecall = "fastrecall.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

